[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "corridor_grid"
description = "A set of corridor environments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.25.2",
    "gymnasium>=0.28.1",
    "pygame>=2.5.1",
]
dynamic = ["version"]
