[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "corridor_grid"
description = "A set of corridor environments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "minigrid>=2.2.1",
    "numpy>=1.25.2",
    "gymnasium>=0.28.1",
    "pygame>=2.5.1",
]
dynamic = ["version"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["corridor_grid*"]
